# rag-ingestion-api

./: .env.example  .gitignore  EXTRACTOR_COMPARISON.md  JIRA_STORIES.md  README.md  compare_extractors.py  main.py  pyproject.toml
.claude/: settings.local.json
docs/: DESIGN.md
src/rag_ingetion_api/: __init__.py  compare_extractors.py  generate_test_docs.py
test_documents/: 01_simple.md  02_technical.md  03_simple_page.html  04_invoice.html  05_simple.txt  06_log_file.txt  07_simple.docx  08_technical_report.docx  README.md
